[package]
authors = ["yamakaky"]
description = "An assembler, debugger and emulator for the DCPU-16"
documentation = "https://docs.rs/dcpu"
homepage = "https://github.com/Yamakaky/dcpu"
license = "LGPL-3.0"
name = "dcpu"
readme = "README.md"
repository = "https://github.com/Yamakaky/dcpu"
version = "0.3.0"

[dependencies]
byteorder = "~0.5.1"
docopt = "~0.6.80"
enum_primitive = "~0.1.0"
error-chain = "0.5"
glium = "0.15"
image = "0.10"
log = "~0.3.6"
nom = "~1.2.2"
num = "~0.1.31"
rustc-serialize = "~0.3.19"
rustyline = "1.0"
simplelog = "~0.2.0"

[profile]

[profile.release]
lto = true
