[package]
authors = ["Yamakaky <yamakaky@yamaworld.fr"]
description = "An assembler, debugger and emulator for the DCPU-16"
documentation = "https://docs.rs/dcpu"
homepage = "https://github.com/Yamakaky/dcpu"
license = "LGPL-3.0"
name = "dcpu"
readme = "README.md"
repository = "https://github.com/Yamakaky/dcpu"
version = "0.4.0"

[features]
default = ["bins", "debugger-cli", "glium"]
nightly = ["serde", "serde_derive", "serde_json"]
bins = ["docopt", "rustc-serialize", "simplelog"]
debugger-cli = ["clap", "rustyline"]

[dependencies]
clap = { version = "2.14", optional = true }
clippy = { version = "~0.0.95", optional = true }
docopt = { version = "0.6", optional = true }
enum_primitive = "0.1"
error-chain = "0.5"
glium = { version = "0.15", optional = true }
log = "0.3"
nom = "1.2"
rustc-serialize = { version = "0.3", optional = true }
rustyline = { version = "1.0", optional = true }
serde = { version = "0.8", optional = true }
serde_derive = { version = "0.8", optional = true }
serde_json = { version = "0.8", optional = true }
simplelog = { version = "0.2", optional = true }

[lib]
crate-type = ["rlib", "dylib"]

[profile]

[profile.release]
lto = true

[workspace]
members = ["server", "image"]
