[package]
authors = ["Yamakaky <yamakaky@yamaworld.fr"]
description = "An assembler, debugger and emulator for the DCPU-16"
documentation = "https://docs.rs/dcpu"
homepage = "https://github.com/Yamakaky/dcpu"
license = "LGPL-3.0"
name = "dcpu"
readme = "README.md"
repository = "https://github.com/Yamakaky/dcpu"
version = "0.5.0"

[features]
default = ["bins", "debugger-cli", "glium", "old-device-id"]
bins = ["docopt", "rustc-serialize", "simplelog", "serde_json"]
debugger-cli = ["clap", "rustyline", "colored"]
old-device-id = []

[dependencies]
clap = { version = "2.14", optional = true }
clippy = { version = "~0.0.95", optional = true }
colored = { version = "1.3", optional = true }
docopt = { version = "0.7", optional = true }
enum_primitive = "0.1"
error-chain = "0.7"
glium = { version = "0.16", optional = true }
log = "0.3"
nom = "2.0"
rustc-serialize = { version = "0.3", optional = true }
rustyline = { version = "1.0", optional = true }
serde = "0.9"
serde_derive = "0.9"
serde_json = { version = "0.9", optional = true }
simplelog = { version = "0.4", optional = true }
time = "0.1"

[profile]

[profile.release]
lto = true

[workspace]
members = ["server", "image"]
